# mood

./: .gitignore  Cargo.toml  README.md  config.txt
src/: cli.rs  cli_commands.rs  config.rs  error.rs  helpers.rs  journal.rs  lib.rs  main.rs  rating.rs
