[package]
name = "mood"
version = "0.1.0"
edition = "2021"
description = "~~~~~\nMOOD: A self-authoring CLI for logging your everyday mood.\n~~~~~"
authors = ["Andreas N. <nilsiker94@gmail.com>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.4", features = ["derive"] }
chrono = { version = "0.4.24", features = ["serde"] }
serde = { version = "1.0.160", features = ["derive"] }
ron = "0.8.0"
directories = "5.0.0"
