[package]
name = "mood"
version = "0.1.2"
edition = "2021"
description = "MOOD: A minimal journaling CLI for logging your everyday mood."
authors = ["Andreas Nilsson <nilsiker94@gmail.com>"]
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Nilsiker/mood"
keywords = ["cli", "journaling"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.4", features = ["derive"] }
chrono = { version = "0.4.24", features = ["serde"] }
serde = { version = "1.0.160", features = ["derive"] }
ron = "0.8.0"
directories = "5.0.0"
